--- a/scss/_accordion.scss
+++ b/scss/_accordion.scss
@@ -155,6 +155,10 @@
                                 padding-bottom: 2rem;
                             }
                         }
+
+                        display: block;
+                        width: 100%;
+                        clear: both;
                     }
 
                     &:last-of-type {
